--- a/src/glade/lingot-config-dialog.glade
+++ b/src/glade/lingot-config-dialog.glade
@@ -183,37 +183,10 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="border_width">10</property>
-                    <property name="n_rows">3</property>
-                    <property name="n_columns">3</property>
+                    <property name="n_rows">2</property>
+                    <property name="n_columns">2</property>
                     <property name="column_spacing">10</property>
                     <property name="row_spacing">10</property>
-                    <child>
-                      <object class="GtkLabel" id="oss_label_input_dev2">
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="label">
-</property>
-                      </object>
-                      <packing>
-                        <property name="left_attach">2</property>
-                        <property name="right_attach">3</property>
-                        <property name="top_attach">1</property>
-                        <property name="bottom_attach">2</property>
-                        <property name="x_options"/>
-                        <property name="y_options"/>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkLabel" id="label1">
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                      </object>
-                      <packing>
-                        <property name="left_attach">2</property>
-                        <property name="right_attach">3</property>
-                        <property name="y_options"/>
-                      </packing>
-                    </child>
                     <child>
                       <object class="GtkLabel" id="label5">
                         <property name="visible">True</property>
@@ -271,15 +244,6 @@
                         <property name="y_options"/>
                       </packing>
                     </child>
-                    <child>
-                      <placeholder/>
-                    </child>
-                    <child>
-                      <placeholder/>
-                    </child>
-                    <child>
-                      <placeholder/>
-                    </child>
                   </object>
                   <packing>
                     <property name="expand">True</property>
@@ -308,7 +272,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="border_width">10</property>
-                <property name="n_rows">4</property>
+                <property name="n_rows">3</property>
                 <property name="n_columns">3</property>
                 <property name="column_spacing">10</property>
                 <property name="row_spacing">10</property>
@@ -345,17 +309,6 @@
                   <packing>
                     <property name="top_attach">2</property>
                     <property name="bottom_attach">3</property>
-                    <property name="y_options"/>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkLabel" id="label13">
-                    <property name="can_focus">False</property>
-                    <property name="label" translatable="yes">Gain</property>
-                  </object>
-                  <packing>
-                    <property name="top_attach">3</property>
-                    <property name="bottom_attach">4</property>
                     <property name="y_options"/>
                   </packing>
                 </child>
@@ -403,20 +356,6 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkLabel" id="label17">
-                    <property name="can_focus">False</property>
-                    <property name="label" translatable="yes">dB</property>
-                  </object>
-                  <packing>
-                    <property name="left_attach">2</property>
-                    <property name="right_attach">3</property>
-                    <property name="top_attach">3</property>
-                    <property name="bottom_attach">4</property>
-                    <property name="x_options"/>
-                    <property name="y_options"/>
-                  </packing>
-                </child>
-                <child>
                   <object class="GtkHScale" id="calculation_rate">
                     <property name="width_request">100</property>
                     <property name="visible">True</property>
@@ -457,20 +396,6 @@
                     <property name="right_attach">2</property>
                     <property name="top_attach">2</property>
                     <property name="bottom_attach">3</property>
-                    <property name="y_options"/>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkHScale" id="gain">
-                    <property name="can_focus">True</property>
-                    <property name="tooltip_text" translatable="yes">Allows you to adapt the signal levels without the aid of an external mixer.</property>
-                    <property name="adjustment">adjustment4</property>
-                  </object>
-                  <packing>
-                    <property name="left_attach">1</property>
-                    <property name="right_attach">2</property>
-                    <property name="top_attach">3</property>
-                    <property name="bottom_attach">4</property>
                     <property name="y_options"/>
                   </packing>
                 </child>
@@ -622,7 +547,7 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkLabel" id="label38">
+                              <object class="GtkLabel" id="fft_size_units_label">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="label" translatable="yes">samples</property>
@@ -635,7 +560,7 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkLabel" id="label41">
+                              <object class="GtkLabel" id="temporal_window_units_label">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="label" translatable="yes">seconds</property>
@@ -660,7 +585,7 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkLabel" id="label49">
+                              <object class="GtkLabel" id="fft_size_label">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="label" translatable="yes">FFT size</property>
@@ -673,7 +598,7 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkLabel" id="label50">
+                              <object class="GtkLabel" id="temporal_window_label">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="label" translatable="yes">Temporal window</property>
@@ -863,10 +788,16 @@
                               <object class="GtkComboBoxText" id="minimum_frequency">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
+                                <property name="hexpand">True</property>
                                 <property name="wrap_width">6</property>
                                 <property name="has_entry">True</property>
                                 <property name="entry_text_column">0</property>
                                 <property name="id_column">1</property>
+                                <child internal-child="entry">
+                                  <object class="GtkEntry" id="comboboxtext-entry6">
+                                    <property name="can_focus">True</property>
+                                  </object>
+                                </child>
                               </object>
                               <packing>
                                 <property name="left_attach">1</property>
@@ -884,6 +815,11 @@
                                 <property name="has_entry">True</property>
                                 <property name="entry_text_column">0</property>
                                 <property name="id_column">1</property>
+                                <child internal-child="entry">
+                                  <object class="GtkEntry" id="comboboxtext-entry9">
+                                    <property name="can_focus">True</property>
+                                  </object>
+                                </child>
                               </object>
                               <packing>
                                 <property name="left_attach">1</property>
